--- a/Lecture3.ipynb
+++ b/Lecture3.ipynb
@@ -60,7 +60,7 @@
    "source": [
     "# Least Square\n",
     "\n",
-    "Robert Wilson: Consciousness itself is an infinite regress. This explains coincidences. "
+    "Robert Wilson: Consciousness itself is an infinite regress."
    ]
   },
   {
@@ -79,7 +79,7 @@
     "\n",
     " $$\\small X = \\pmatrix{\\bs x_1^T \\\\ \\bs x_2^T \\\\ \\vdots \\\\ \\bs x_m^T}, \\;\\; \\bs y = \\pmatrix{y_1 \\\\ y_2 \\\\ \\vdots \\\\ y_m}$$\n",
     " \n",
-    "* We want to find a factor loading vector $\\bs \\beta$ so that the linear function $\\hat y = \\bs x^T \\bs \\beta$ is the best aproximation to the observed inputs/outputs.\n",
+    "* We want to find a factor loading vector $\\bs \\beta$ so that the linear function $\\hat y = \\bs x^T \\bs \\beta$ best approximate the observed inputs/outputs.\n",
     "* $X \\bs \\beta = \\bs y$ is over-determined, no vector $\\bs \\beta$ solves it exactly\n",
     "* Instead, we find the $\\bs \\beta^* $ that minimizes $\\Vert X \\bs{\\beta - y}\\Vert_2$."
    ]
@@ -104,7 +104,7 @@
     "\\bs \\beta^* &=& (X^TX)^{-1}X^T\\bs y\n",
     "\\end{eqnarray}$$\n",
     "\n",
-    "* The solution is equivalent to linear regression, but beware the difference\n",
+    "* The solution is equivalent to linear regression, but the later requires stronger assumptions for forecasting.\n",
     "* $X^+ = (X^TX)^{-1}X^T$ is also known as the psuedo inverse of $X$ because $X^+X = I$\n",
     "  * note $XX^+$ is not even a valid matrix multiplication. "
    ]
@@ -276,7 +276,7 @@
     "l(\\bs \\beta) = \\Vert X \\bs{\\beta - y} \\Vert_2^2 + \\lambda_1 \\Vert W \\bs \\beta \\Vert_1 + \\lambda_2 \\Vert W \\bs \\beta \\Vert_2^2\n",
     "$$\n",
     "\n",
-    "Both LASSO and elasticnet reduce to support vector machine (SVM)."
+    "Both LASSO and Elasticnet are equivalent to support vector machine (SVM)."
    ]
   },
   {
