--- a/Lecture5.ipynb
+++ b/Lecture5.ipynb
@@ -637,14 +637,14 @@
     "\n",
     "Steps to compute $\\frac{\\partial v}{\\partial \\bs q}$ numerically:\n",
     "\n",
-    "* bump one tenor point $q_i$, re-bootstrap the whole CDS curve\n",
-    "  * for each tenor point ```j=1:maturity```, root search the knot value of hazard rate $h_j$\n",
+    "1. bump one tenor point $q_i$, re-bootstrap the whole CDS curve\n",
+    "  1. for each tenor point ```j=1:maturity```, root search the knot value of hazard rate $h_j$\n",
     "    * for each trial value of $h_j$\n",
     "      * build tension spline interpolation on the whole hazard rate term structure $\\bs h$\n",
     "      * price the benchmark CDS instrument $b_j$, \n",
     "      * continue root search until $b_j$ matches the market price to a high precision\n",
-    "* price the besoke instrument $v$ using the bumped curve\n",
-    "* compute the delta using finite difference"
+    "  1. price the besoke instrument $v$ using the bumped curve, and iterate if pricing error is large\n",
+    "1. compute the delta using finite difference"
    ]
   },
   {
