--- a/Lecture7.ipynb
+++ b/Lecture7.ipynb
@@ -828,6 +828,36 @@
     }
    },
    "source": [
+    "# Pitfalls with sampling extrememe events\n",
+    "\n",
+    "Consider the following scenario of winning odds $p=10^{-8}$:\n",
+    "\n",
+    "- We draw 10,000 MC sample path and none of them hit the positive payoff\n",
+    "- Our MC error estimation gives incorrect value of 0 \n",
+    "- but MC simulation error $\\frac{\\hat s}{\\sqrt{n}}$ estimated from the samples is 0.\n",
+    "\n",
+    "Why the MC error estimation failed us?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "Because of the large error of MC error $\\sqrt{\\frac{\\beta-1}{4n}}\\frac{\\sigma}{\\sqrt{n}}$, in this case the kurtosis $\\beta$ is very large, $\\beta >> n = 10,000$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "## Intuitions of importance sampling\n",
     "\n",
     "The expected payoff is the same between the two lotteries:\n",
