--- a/Lecture7.ipynb
+++ b/Lecture7.ipynb
@@ -833,10 +833,10 @@
     "Consider the following scenario of winning odds $p=10^{-8}$:\n",
     "\n",
     "- We draw 10,000 MC sample path and none of them hit the positive payoff\n",
-    "- Our MC error estimation gives incorrect value of 0 \n",
-    "- but MC simulation error $\\frac{\\hat s}{\\sqrt{n}}$ estimated from the samples is 0.\n",
+    "- The average of the 10,000 paths gives incorrect value of 0. \n",
+    "- but MC error  estimated from the samples is $\\frac{\\hat s}{\\sqrt{n}} = 0$.\n",
     "\n",
-    "Why the MC error estimation failed us?"
+    "Why and how the MC error estimation failed us?"
    ]
   },
   {
