--- a/Lecture10.ipynb
+++ b/Lecture10.ipynb
@@ -493,7 +493,7 @@
     "\n",
     "Take the discrete form of cross entropy:\n",
     "\n",
-    "$$ \\max  - \\frac{1}{2} \\bs e^T W \\bs e $$\n",
+    "$$ \\text{argmax}_{\\bs p}  \\left(- \\bs p^T \\left(\\log(\\bs p) - \\log(\\bs q)\\right) - \\frac{1}{2} \\bs e^T W \\bs e \\right) $$\n",
     "subj. to : \n",
     " $$\\begin{array}\\\\\n",
     " \\bs 1^T \\bs p & = 1 \\\\\n",
