--- a/Lecture1.ipynb
+++ b/Lecture1.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "# Scientific Computing in Finance\n",
     "\n",
-    "* MATH-GA 2048, Spring 2018\n",
+    "* MATH-GA 2048, Spring 2019\n",
     "* Courant Institute of Mathematical Sciences, New York University"
    ]
   },
@@ -25,13 +25,13 @@
     "## Instructors\n",
     "\n",
     "#### Yadong Li\n",
-    "* Head of Portfolio Pricing, Quantitative Analytics, Barclays\n",
+    "* MD, Head of Trading Central, Quantitative Analytics, Barclays\n",
     "* Ph.D. in Physics, M.S. in Computer Sciences, University of Wisconsin-Madison\n",
     "* Master of Financial Engineering, University of California, Berkeley \n",
     "\n",
-    "#### Wujiang Lou\n",
-    "* Senior trader, Global Fixed Income, HSBC\n",
-    "* Ph.D. in Aeronautics and Astronautics, Nanjing University"
+    "#### Hongwei Cheng\n",
+    "* Chief Risk Officer, Head of Research, Mill Hill Capital\n",
+    "* Ph.D. in Applied Mathematics, New York University"
    ]
   },
   {
@@ -122,8 +122,8 @@
     "| 4-5 | Rootfinding and interpolation | Curve building | Y. Li |\n",
     "| 6 | Derivatives and integration | Hedging, Risk Transformation | Y. Li |\n",
     "| 7-8 | Monte Carlo simulation | Exotic pricing | Y. Li |\n",
-    "| 9-10 | Optimization | Model calibration | W. Lou |\n",
-    "| 11-12 | ODE/PDE | Pricing | W. Lou |\n",
+    "| 9-10 | Optimization | Model calibration | H. Cheng |\n",
+    "| 11-12 | ODE/PDE | Pricing | H. Cheng |\n",
     "| 13 | Entropy and Allocation | Advanced practical problems | Y. Li |"
    ]
   },
@@ -416,7 +416,7 @@
     "\"Any sufficiently complicated C or Fortran program contains an ad-hoc, informally-specified, bug-ridden, slow implementation of half of Common Lisp.\"\n",
     "\n",
     "- Clojure is a modern implementation of Lisp\n",
-    "- Julia borrowed heavily from Lisp, very promising"
+    "- Julia is a very promising new language, heavily influenced by Lisp"
    ]
   },
   {
@@ -1850,21 +1850,21 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.15rc1"
   }
  },
  "nbformat": 4,
