--- a/Lecture1.ipynb
+++ b/Lecture1.ipynb
@@ -1726,7 +1726,9 @@
     }
    },
    "source": [
-    "<center><img src = \"img/bumpsize.png\", height = 400, width = 400></center>"
+    "## An Example of Numerical Delta\n",
+    "\n",
+    "<center><img src = \"img/bumpsize.png\", height = 600, width = 600></center>"
    ]
   },
   {
