--- a/Lecture1.ipynb
+++ b/Lecture1.ipynb
@@ -183,7 +183,7 @@
     }
    },
    "source": [
-    "# Software Practices\n",
+    "# Software Development Practices\n",
     "\n",
     "Roberto Waltman: In the one and only true way. The object-oriented version of \"Spaghetti code\" is, of course, \"Lasagna code\". "
    ]
@@ -1727,6 +1727,8 @@
    },
    "source": [
     "## An Example of Numerical Delta\n",
+    "\n",
+    "For $f(x) = e^x$ at $x=1$:\n",
     "\n",
     "<center><img src = \"img/bumpsize.png\", height = 600, width = 600></center>"
    ]
