--- a/syllabus.ipynb
+++ b/syllabus.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Scientific Computing in Finance\n",
     "\n",
-    "* Math-GA 2048,  Spring 2018\n",
+    "* Math-GA 2048,  Spring 2019\n",
     "* Courant Institute of Mathematical Sciences, New York University\n",
     "\n",
     "This course covers scientific computing methods and techniques, and their applications in Finance.\n",
@@ -21,13 +21,13 @@
     "* L. Anderson and V. Piterbarg: Interest Rate Modeling, Volume I and II 2010.\n",
     "\n",
     "Content:\n",
-    "1. Introduction: (1 week: Yadong)\n",
+    "1. Introduction: (1 week)\n",
     " * overview of the class\n",
     " * introduction to computer architecture, memory hierarchy and performance\n",
     " * overview of good software practices\n",
     " * source of errors, IEEE standard of floating point numbers\n",
     " * error propagation and condition number\n",
-    "2. Linear Algebra (2 weeks, Yadong)\n",
+    "2. Linear Algebra (2 weeks)\n",
     " * review of linear algebra\n",
     " * solving linear system: Gaussian elimination, LU factorization\n",
     " * correlation and covariance matrix, Cholesky decomposition\n",
@@ -38,20 +38,20 @@
     " * PCA analysis and its applications in Finance\n",
     " * SVD analysis\n",
     " * Conditioning, condition number for linear systems\n",
-    "3. Interpolation, curve building and root search (1.5 weeks, Yadong)\n",
+    "3. Interpolation, curve building and root search (1 week)\n",
     " * Overview of 1-D root search methods: Bisection, Secant, Newton-Raphson and Brent\n",
     " * Types of curves and curve building in Finance\n",
     " * Piecewise linear/constant interpolation\n",
     " * Cubic spline, Tension spline\n",
     " * Bootstrapping and iterative algorithm\n",
     " * Perturbation and locality\n",
-    "4. derivatives and hedging (1.5 weeks, Yadong)\n",
+    "4. derivatives and hedging (1 week)\n",
     " * Order of accuracy in finite difference\n",
     " * Derivative and deltas: Jacobian matrix for delta transformation\n",
     " * Hedging with bespoke instruments, and a small number of liquid instruments\n",
     " * Hedge optimization\n",
     " * Numerical integration and its accuracy\n",
-    "5. Optimization (2 weeks, Wujiang)\n",
+    "5. Optimization (2 weeks)\n",
     " * Introduction, survey of optimization problems\n",
     "    * Unconstrained, onstrained\n",
     "    * Linear programming, Quadratic programming\n",
@@ -64,7 +64,7 @@
     "    * Volatility Estimation with GARCH\n",
     "    * Dynamic programming --- Option Pricing, Structured ABS Securities\n",
     " * Optional: Stochastic programming\n",
-    "6. Monte Carlo simulation (2 weeks, Yadong)\n",
+    "6. Monte Carlo simulation (2 weeks)\n",
     " * Pseudo random number generators\n",
     " * MC error, sample statistics, curse of dimensionality\n",
     " * Discretization of SDEs\n",
@@ -78,7 +78,7 @@
     " * Information entropy\n",
     " * Maximum entropy and the dual problem\n",
     " * Risk capital allocation methods: Shapley, Aumann-Shapley, Euler and Constrained Shapley\n",
-    "8. ODE/PDE (2 weeks, Wujiang)\n",
+    "8. ODE/PDE (2 weeks)\n",
     " * ODEs, Runge Kutta method (e.g. the ODE from affine term structure models)\n",
     " * Parabolic PDE in finance from valuation problems\n",
     " * Tree method, Finite difference method\n",
@@ -113,7 +113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
