--- a/Lecture1.ipynb
+++ b/Lecture1.ipynb
@@ -235,8 +235,8 @@
     " * optimize cache and memory access\n",
     " * require highly specialized skills and low level programming (like in C/C++/Fortran)\n",
     "* Premature optimization for speed is the root of all evil\n",
-    " * Simplicity and generality of the code are often sacrificed\n",
-    " * Execution speed is usually not the most critical factor in practice"
+    " * Simplicity, generality and scalability of the code are often sacrificed\n",
+    " * Execution speed is not the most critical factor in most circumstances"
    ]
   },
   {
@@ -284,9 +284,7 @@
     }
    },
    "source": [
-    "## Conventional wisdom for programming\n",
-    "\n",
-    "Typical advice includes:\n",
+    "## Conventional advice for programming\n",
     "\n",
     "* Choose good names for your variables and functions\n",
     "* Write comments and documents\n",
@@ -411,10 +409,6 @@
     "\n",
     "\"Lisp is worth learning for the profound enlightenment experience you will have when you finally get it; that experience will make you a better programmer for the rest of your days, even if you never actually use Lisp itself a lot.\"\n",
     "\n",
-    "Greenspun's tenth rule of programming:\n",
-    "\n",
-    "\"Any sufficiently complicated C or Fortran program contains an ad-hoc, informally-specified, bug-ridden, slow implementation of half of Common Lisp.\"\n",
-    "\n",
     "- Clojure is a modern implementation of Lisp\n",
     "- Julia is a very promising new language, heavily influenced by Lisp"
    ]
@@ -427,7 +421,7 @@
     }
    },
    "source": [
-    "## We use Python\n",
+    "## We use Python for this Class\n",
     "\n",
     "Python\n",
     "\n",
