--- a/PythonSetup.ipynb
+++ b/PythonSetup.ipynb
@@ -26,7 +26,7 @@
     "All the class materials are available at:\n",
     "\n",
     "* lecture slides/homework assignments: http://yadongli.github.io/nyumath2048/\n",
-    "* IPython notebook sources: https://github.com/yadongli/nyumath2048/\n",
+    "* IPython notebook github repository: https://github.com/yadongli/nyumath2048/\n",
     "\n",
     "The lecture slides are all generated from the IPython notebooks sources. You can get a copy of the source by:\n",
     "\n",
@@ -53,7 +53,7 @@
    "source": [
     "## Python Installation\n",
     "\n",
-    "**Python version 3.6.x**\n",
+    "**Python version 3.6.x or above**\n",
     "* Python 3.x is not backward compatible\n",
     "* either 32bit or 64bit version works, 64bit is recommended \n",
     "\n",
@@ -65,32 +65,6 @@
     "\n",
     "* Anaconda comes with command line package manager ```conda```\n",
     "* <a href=https://pypi.python.org/pypi/pip>pip</a> can be used to install Python packages that are not part of Anaconda distribution (rarely needed)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "## Use Jupyter/IPython Notebook\n",
-    "\n",
-    "\n",
-    "Jupyter notebook is a versatile and productive environment for scientific computing. IPython is Jupyter's specialization for Python programming language. All the lecture slides are created from Jupyter/IPython notebook, and all the homework will be done in Jupyter/IPython notebook.\n",
-    "\n",
-    "The following link is a step by step tutorial of Jupyter/IPython notebook, you can ignore anything related to plotly, we are not going the use it in the class. But the rest, in particular matpliblib, numpy and pandas will be used throughout the class. Please following the tutorial to get yourself familiar with them.\n",
-    "\n",
-    "https://plot.ly/python/ipython-notebook-tutorial/\n",
-    "\n",
-    "The following is the official documentation of IPython, it is also worthwhile to go through:\n",
-    "\n",
-    "http://ipython.readthedocs.org/en/stable/interactive/tutorial.html\n",
-    "\n",
-    "and Google is another exellent source for any Python or Jupyter/IPython questions. \n",
-    "\n",
-    "* Jupyter/IPython notebook works with newer versions of all major browsers. (IE older than version 10 does not work)"
    ]
   },
   {
@@ -121,9 +95,35 @@
     }
    },
    "source": [
+    "## Use Jupyter/IPython Notebook\n",
+    "\n",
+    "\n",
+    "Jupyter notebook is a versatile and productive environment for scientific computing. IPython is Jupyter's specialization for Python programming language. All the lecture slides are created from Jupyter/IPython notebook, and all the homework will be done in Jupyter/IPython notebook.\n",
+    "\n",
+    "The following link is a step by step tutorial of Jupyter/IPython notebook, which will be heavily used in the class. Please follow the tutorial to familiarize yourself with Jupyter notebook, matplotlib and pandas:\n",
+    "\n",
+    "https://www.dataquest.io/blog/jupyter-notebook-tutorial/\n",
+    "\n",
+    "The following is the official documentation of IPython, it is also worthwhile to go through:\n",
+    "\n",
+    "http://ipython.readthedocs.org/en/stable/interactive/tutorial.html\n",
+    "\n",
+    "and Google is another exellent source for any Python or Jupyter/IPython questions. \n",
+    "\n",
+    "* Jupyter/IPython notebook works with newer versions of all major browsers. (IE older than version 10 does not work)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "## Useful IPython tips\n",
     "\n",
-    "The combination of #2 and #3 is a very efficient way to debug your python code within IPython notebook.\n",
+    "The combination of #2 and #3 below is a very efficient way to debug your python code within IPython notebook.\n",
     "\n",
     "1. ```%pylab inline```: inline placement of figures, ideal for printing and presentation\n",
     "2. ```%qtconsole```: start a separate ipython qtconsole that shares the same states with the IPython notebook\n",
@@ -145,7 +145,7 @@
     "The following online Python tutorials are highly recommended.\n",
     "\n",
     "Python language: \n",
-    "http://www.diveintopython.net/\n",
+    "http://histo.ucsf.edu/BMS270/diveintopython3-r802.pdf\n",
     "\n",
     "Numpy: \n",
     "http://scipy.org/Tentative_NumPy_Tutorial\n",
@@ -178,7 +178,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
