--- a/Lecture1.ipynb
+++ b/Lecture1.ipynb
@@ -210,9 +210,9 @@
     "| L-1 Cache |  98GB/s | 4 cycles | 32K/core |\n",
     "| L-2 Cache |  50GB/s | 10 cycles | 256K/core |\n",
     "| L-3 Cache |  30GB/s | 40 - 75 cycles | 8MB shared |\n",
-    "| RAM | 15GB/s | 60-100 ns | 2 - 128GB |\n",
-    "| Disk | 50MB/s | ~5ms | $\\infty$ |\n",
-    "| Network | vary | much longer | $\\infty$ |"
+    "| RAM | 15GB/s | 60-100 ns | ~TB |\n",
+    "| SDD | up to 4GB/s | ~0.1ms | $\\infty$ |\n",
+    "| Network | up to 12GB/s | much longer | $\\infty$ |"
    ]
   },
   {
@@ -236,7 +236,7 @@
     " * require highly specialized skills and low level programming (like in C/C++/Fortran)\n",
     "* Premature optimization for speed is the root of all evil\n",
     " * Simplicity, generality and scalability of the code are often sacrificed\n",
-    " * Execution speed is not the most critical factor in most circumstances"
+    " * Execution speed is often not the most critical factor in most circumstances"
    ]
   },
   {
@@ -421,7 +421,7 @@
     }
    },
    "source": [
-    "## We use Python for this Class\n",
+    "## We use Python for this class\n",
     "\n",
     "Python\n",
     "\n",
@@ -605,7 +605,7 @@
     "* The vast majority of general purpose CPUs are IEEE 754 compliant\n",
     "* Software is more complicated  \n",
     "  * Compiled language like C++ depends on the hardware's implementation.\n",
-    "  * Some software may have their own behaviours, e.g., the Java strictfp flag"
+    "  * Some software implemented their own special behaviours, e.g., the Java strictfp flag"
    ]
   },
   {
@@ -627,10 +627,10 @@
     "\n",
     "* 32 bit vs. 64 bit format\n",
     "\n",
-    "| Format | Sign | Fraction | Exponent | $p$ |\n",
-    "| :----: | ---: | ----------: | -------: | --------: | \n",
-    "| IEEE 754 - 32 bit | 1    |      23     |   8      |  127 |\n",
-    "| IEEE 754 - 64 bit | 1    |      52     |   11     | 1023 |\n",
+    "| Format | Sign | Fraction | Exponent | $p$ | Exponent Range |\n",
+    "| :----: | ---: | ----------: | -------: | --------: | :--: |\n",
+    "| IEEE 754 - 32 bit | 1    |      23     |   8      |  127 | 1 to 245 |\n",
+    "| IEEE 754 - 64 bit | 1    |      52     |   11     | 1023 | 1 to 2046 |\n",
     "\n",
     "* an implicit leading bit of 1 and the binary point before fraction bits\n",
     "* 0 and max exponent reserved for special interpretations: 0, NaN, Inf etc."
@@ -1546,7 +1546,7 @@
     "* Dramatic precision loss when subtracting numbers that are very similar \n",
     " * All the identical leading significants cancels\n",
     " * The result has much fewer number of significant digits\n",
-    "* Catestrophic cancellation could happen in practice \n",
+    "* Catestrophic cancellation could easily happen in practice \n",
     " * Deltas are often computed by bump and re-value\n",
     " * Very small bump sizes should be avoided"
    ]
