--- a/Lecture1.ipynb
+++ b/Lecture1.ipynb
@@ -434,7 +434,7 @@
     "\n",
     "* numpy/scipy: high quality matrix and numerical library\n",
     "* matplotlib: powerful visualization library\n",
-    "* IPython: highly productive interactive working environment\n",
+    "* Jupyter notebook: highly productive interactive working environment\n",
     "* Pandas: powerful data and time series analysis package\n",
     "* Machine learning frameworks: Tensorflow, PyTorch, Scikit-learn etc."
    ]
@@ -456,7 +456,7 @@
     "Python version:\n",
     "\n",
     "* ** Python 3.6.x or higher ** : python is not backward compatible, do not use Python 2\n",
-    "* With the latest IPython, numpy/pandas/scipy etc.\n",
+    "* With the latest Jupyter notebook, numpy/pandas/scipy etc.\n",
     "* either 32bit or 64bit version works\n",
     "\n",
     "Python setup instructions:\n",
@@ -629,8 +629,8 @@
     "\n",
     "| Format | Sign | Fraction | Exponent | $p$ | Exponent Range |\n",
     "| :----: | ---: | ----------: | -------: | --------: | :--: |\n",
-    "| IEEE 754 - 32 bit | 1    |      23     |   8      |  127 | 1 to 245 |\n",
-    "| IEEE 754 - 64 bit | 1    |      52     |   11     | 1023 | 1 to 2046 |\n",
+    "| IEEE 754 - 32 bit | 1    |      23     |   8      |  127 | -126 to 127 |\n",
+    "| IEEE 754 - 64 bit | 1    |      52     |   11     | 1023 | -1022 to 1023 |\n",
     "\n",
     "* an implicit leading bit of 1 and the binary point before fraction bits\n",
     "* 0 and max exponent reserved for special interpretations: 0, NaN, Inf etc."
