--- a/Lecture1.ipynb
+++ b/Lecture1.ipynb
@@ -627,7 +627,7 @@
     "\n",
     "* 32 bit vs. 64 bit format\n",
     "\n",
-    "| Format | Sign | Fraction | Exponent | $p$ | Exponent Range |\n",
+    "| Format | Sign | Fraction | Exponent | $p$ | (Exponent-p) range |\n",
     "| :----: | ---: | ----------: | -------: | --------: | :--: |\n",
     "| IEEE 754 - 32 bit | 1    |      23     |   8      |  127 | -126 to 127 |\n",
     "| IEEE 754 - 64 bit | 1    |      52     |   11     | 1023 | -1022 to 1023 |\n",
@@ -1544,7 +1544,7 @@
    },
    "source": [
     "* Dramatic precision loss when subtracting numbers that are very similar \n",
-    " * All the identical leading significants cancels\n",
+    " * Most leading significant digits cancel\n",
     " * The result has much fewer number of significant digits\n",
     "* Catestrophic cancellation could easily happen in practice \n",
     " * Deltas are often computed by bump and re-value\n",
@@ -1707,7 +1707,9 @@
     "\n",
     "$$ \\frac{1}{2} f''(x) h^2 = f(x) \\epsilon_m $$\n",
     "\n",
-    "Thus the optimal $h^* = \\sqrt{\\frac{2 f(x)\\epsilon_m}{f''(x)}} $. But in reality, it is often better off to simply use central difference:\n",
+    "Thus the optimal $h^* = \\sqrt{\\frac{2 f(x)\\epsilon_m}{f''(x)}} $. \n",
+    "\n",
+    "It is however better off to simply use central difference:\n",
     "\n",
     "$$ f'(x) \\approx \\frac{1}{2h}\\left(f(x+h) - f(x-h)\\right) $$"
    ]
