--- a/Lecture2.ipynb
+++ b/Lecture2.ipynb
@@ -935,13 +935,13 @@
    "source": [
     "## Cholesky decomposition\n",
     "\n",
-    "If $A$ is symmetric semi positive definate (SPD) matrix \n",
+    "If $A$ is symmetric semi positive definite (SPD) matrix \n",
     "\n",
     "* $A$ can be decomposed as $A = LL^T$, where $L$ is lower triangle\n",
     "* In another word, the $U = L^T$ in $A$'s LU decomposition\n",
     "* $L$ can be viewed as the \"square root\" of $A$\n",
     "\n",
-    "Cholesky decomposition is unique:\n",
+    "Cholesky decomposition is not unique if the matrix is semi positive definite, but unique when it is positive definite:\n",
     "\n",
     "* The rank is same between $L$ and $A$\n",
     "* Beware that $A = LL^T \\neq L^TL$"
@@ -1616,7 +1616,7 @@
    "source": [
     "## Benchmark portfolio and $\\bs \\beta$\n",
     "\n",
-    "Benchmark portfolio $\\bs w_b$ is usually an index portfolio to measure the performane of active portfolio management. \n",
+    "Benchmark portfolio $\\bs w_b$ is usually an index portfolio to measure the performance of active portfolio management. \n",
     "  * The beta of a portfolio $\\bs w$ to the benchmark is \n",
     "  $$\\frac{\\text{cov}(\\bs w^T \\tilde{\\bs r}, \\bs w_b^T \\tilde{\\bs r})}{\\sigma_b^2} = \\frac{\\bs w^T V \\bs w_b}{\\sigma_b^2} = \\bs w^T \\bs \\beta_b$$\n",
     "  * Define $\\bs \\beta_b = \\frac{V\\bs w_b}{\\sigma^2_b} $, the vector of individual assets' betas\n",
