p-norm needs to be absolute value

--- a/Lecture2.ipynb
+++ b/Lecture2.ipynb
@@ -2422,10 +2422,10 @@
     "* Homogeneous: $\\Vert a \\bs u \\Vert  = |a| \\Vert \\bs u\\Vert $\n",
     "* Triangle inequality: $\\Vert \\bs u + \\bs v\\Vert  \\le \\Vert \\bs u\\Vert  + \\Vert \\bs v\\Vert $\n",
     "\n",
-    "##Common vector norms\n",
+    "## Common vector norms\n",
     "* L1: $\\Vert \\bs u\\Vert _1 = \\sum_i | u_i |$\n",
     "* L2 (Euclidean): $\\Vert \\bs u\\Vert _2 = (\\sum u_i^2)^{\\frac{1}{2}} = (\\bs u^T \\bs u)^\\frac{1}{2}$\n",
-    "* Lp: $\\Vert \\bs u\\Vert _p = (\\sum u_i^p)^{\\frac{1}{p}}$\n",
+    "* Lp: $\\Vert \\bs u\\Vert _p = (\\sum | u_i |^p)^{\\frac{1}{p}}$\n",
     "* L${\\infty}$: $\\Vert \\bs u\\Vert _\\infty = \\max(|u_1|, |u_2|, ..., |u_n|)$"
    ]
   },
