Small style improvements

--- a/PythonSetup.ipynb
+++ b/PythonSetup.ipynb
@@ -128,8 +128,8 @@
     "1. ```%pylab inline```: inline placement of figures, ideal for printing and presentation\n",
     "2. ```%qtconsole```: start a separate ipython qtconsole that shares the same states with the IPython notebook\n",
     "3. ```%pdb```: the latest IPython notebook version (>4.0.0) does support interactive debugger. You can also run it from qtconole.\n",
-    "4. you can mix Latex direct with markdown text by surrounding them with \\$ or \\$\\$\n",
-    "5. sympy is a useful symbolic math library, it can create complicated Latex formulae programatically (see Lecture4 as an example)"
+    "4. you can mix $\\LaTeX$ direct with markdown text by surrounding them with `$` or `$$`.\n",
+    "5. [sympy](https://www.sympy.org/en/index.html) is a useful symbolic math library. It can create complicated $\\LaTeX$ formulae programatically (see [Lecture 4](https://nbviewer.jupyter.org/github/yadongli/nyumath2048/blob/master/Lecture4.ipynb) as an example)"
    ]
   },
   {
