--- a/Homework2.ipynb
+++ b/Homework2.ipynb
@@ -318,15 +318,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. estimate the historical correlation and covariance matrix of the DJIA constiuents' daily returns, \n",
+    "1. estimate the historical correlation and covariance matrix of the DJIA constituents' daily returns\n",
     "2. estimate historical excess return of individual stocks (assume the historical risk free rate is 3%)\n",
     "3. compute the optimal portfolio using the estimated historical excess return and covariance matrix, comment on whether the portfolio looks reasonable.\n",
     "4. compute the implied return forecast from the actual DJIA portfolio, compare this to the historical estimate, comment on which may be a better forecast for the future returns.\n",
-    "5. compute the condition number of the covariance matrix, and comments the numerical stability of the optimal portfolio. You can use the python function ```numpy.linalg.norm``` for matrix norm.\n",
+    "5. compute the condition number of the covariance matrix, and comment on the numerical stability of the optimal portfolio. You can use the python function ```numpy.linalg.norm``` for matrix norm.\n",
     "2. take the daily return time series, and split them into two segments: one only contains odd days' returns and the other only contains even days' returns. Then estimate every DJIA stock's annualized return and annualized vol from these two data segements, and compare their results. Please comment on which of the two metric, return or volatility, can be reliably estimated from historical data. \n",
     "6. [Extra credit] Please repeat the analysis using weekly returns and comment on whether the results are materially different\n",
     "6. [Extra credit]: use numerical simulation to show that the optimal portfolio from #3 indeed has the largest Sharp ratio for the historical excess return and covariance; the best way to illustrate this is to introduce many random perturbations around the optimal portfolio. ```numpy.random``` is a random number generator package in Python.\n",
-    "7. [Extra credit, open question] comment on what practical implication you might infer from the results in 8.\n",
+    "7. [Extra credit, open question] comment on what practical implication you might infer from the results in #8.\n",
     "\n",
     "Hints and requirements: \n",
     "* as discussed in class, returns are only meaningful in the relative sense, so please annualize all your results. You will lose credit without annualization.\n",
